fix map, z-index

--- a/src/sass/_contacts.sass
+++ b/src/sass/_contacts.sass
@@ -6,6 +6,7 @@
     background-color: $text-color-light
     padding: 33px 40px 39px 62px
     border-radius: 7px
+    z-index: 1
     &__title
       margin: 0
       font-size: 18px
@@ -63,8 +64,7 @@
       .contacts-block__email
         font-weight: 300
         text-decoration: none
-        color: #373737
-        
+        color: #373737        
 .map 
   width: 100%
   height: 550px
