--- a/src/sass/_feedback.sass
+++ b/src/sass/_feedback.sass
@@ -22,7 +22,7 @@
       width: 10px
       height: 47px
       cursor: pointer
-      z-index: 99
+      z-index: 2
       &__right 
         right: -19px
         background: url(../img/feedback/arrow-feedback__right.png) no-repeat center
