--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -220,7 +220,7 @@
         width: 22px
         height: 79px
         background-color: $active-color
-        z-index: 99
+        z-index: 2
         cursor: pointer 
       &__right-mobile 
         right: 0
@@ -254,6 +254,9 @@
       display: block
   .copyright 
     font-size: 11px
+  .map 
+    width: 100%
+    height: 420px
 
 @media (min-width: 576px) and (max-width: 767.98px)
   .hidden-mobile 
@@ -478,7 +481,7 @@
     &-mobile 
       display: block
   .copyright 
-    font-size: 12px
+    font-size: 12px  
 
 @media (min-width: 768px) and (max-width: 991.98px)
   .hidden-mobile 
