--- a/src/sass/_production.sass
+++ b/src/sass/_production.sass
@@ -40,7 +40,7 @@
     width: 22px
     height: 100%
     border: 1px solid $active-color
-    z-index: 99
+    z-index: 2
     cursor: pointer
     transition: all 0.2s
     &__right 
